fixed scroll on mobile menu

--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -848,6 +848,7 @@ legend {
   z-index: 0;
   height:100%;
   overflow-x:hidden;
+  overflow-y: scroll;
   display: block;
   box-shadow: -5px 0px 8px 0px rgba(0, 0, 0, 0.4) inset;
   }
